:bug: Mobile navbar couldn't be clicked because the giant logo was z-indexed to the stratosphere. This ensures that the nav still sits on top.

--- a/assets/src/sass/components/_navbar.scss
+++ b/assets/src/sass/components/_navbar.scss
@@ -49,7 +49,7 @@ $button-hover-color: #d77653; // What hover color do you want the button to be?
   padding-left: 10px;
   position: absolute;
   text-transform: uppercase;
-  z-index: 15;
+  z-index: 45;
   a,
   a:visited {
     color: $nav-font-color;
@@ -93,7 +93,7 @@ nav {
   padding: $nav-height 0 0;
   position: absolute;
   width: 100%;
-  z-index: 10;
+  z-index: 30;
   ul {
     display: none;
     li {
